docs: Adds docs for Get All openings
