# internal/opening/controller/getAll.go
@@ -8,6 +8,16 @@ import (
 	"github.com/jacksrm/gopportunitties/internal/opening/dto"
 )
 
+// @BasePath /api/v1/
+
+// @Summary Get All Openings
+// @Description Gets all openings
+// @Tags openings
+// @Accept json
+// @Produce json
+// @Success 200 {object} dto.RequestResponse
+// @Failure 400 {object} dto.RequestResponse
+// @Router /openings [get]
 func (c *Controller) GetAll(context *gin.Context) {
 	const operationName = "GetOpenings"
 	result, err := c.service.GetAll()
